document expiry tab alignment issue fixes

--- a/lighthr/pages/dashboard/dashboard2.html
+++ b/lighthr/pages/dashboard/dashboard2.html
@@ -971,14 +971,14 @@ td.center, td.left {
                 <div class="col-lg-6 col-md-6 col-12 col-sm-12">
                     <div class="card">
                         <div class="header">
-                            <h2>Expiry Details</h2>
+                            <h2>Document Expiry Details</h2>
                         </div>
                         <div class="table-responsive body">
                             <table class="table table-hover js-basic-example contact_list documenttable">
                                 <thead>
                                     <tr>
-                                        <th class="center">Name</th>
-                                        <th class="center"> Document Expiry Details </th>
+                                        <th class="center">Doc Name</th>
+                                        <th class="center"> Expiry Date </th>
                                         <!-- <th class="center"> Status  </th> -->
                                         <th class="center"> Action </th>
                                     </tr>
