otp option added and dashboard page new details added

--- a/lighthr/pages/dashboard/dashboard2.html
+++ b/lighthr/pages/dashboard/dashboard2.html
@@ -592,33 +592,47 @@ td.center, td.left {
                 <div class="col-lg-5 col-md-5 col-sm-12">
                     <div class="row">
                          <div class="labelgroup col-md-6">
-                            <label>code</label>
-                            <span>COLLG</span>
+                            <label>Employee No:</label>
+                            <span>EMP11XXX</span>
                         </div>
                         <div class="labelgroup col-md-6">
-                            <label>Status</label>
+                            <label>Status:</label>
                             <span>Full Time</span>
                         </div>
+                        <div class="labelgroup col-md-6">
+                            <label>Client Name:</label>
+                            <span>RTA</span>
+                        </div>
+                        <div class="labelgroup col-md-6">
+                            <label>Account:</label>
+                            <span>RTA Drivers</span>
+                        </div>
                          <div class="labelgroup col-md-6">
-                            <label>Born</label>
+                            <label>Co-ordinator ID/Name:</label>
+                            <span>1180/Ahmed</span>
+                        </div>
+                         <div class="labelgroup col-md-6">
+                            <label>Born:</label>
                             <span>16 Aug 1982</span>
                         </div>
                         <div class="labelgroup col-md-6">
-                            <label>Age</label>
+                            <label>Age:</label>
                             <span>38 Years</span>
                         </div>
                         <div class="labelgroup col-md-6">
-                            <label>Gender</label>
+                            <label>Gender:</label>
                             <span>Female</span>
                         </div>
-                         <div class="labelgroup col-md-6">
-                            <label>Employed for</label>
-                            <span>10 years 8 months</span>
-                        </div>
+                        
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12" style="padding-right: 85px;">
                     <div class="">
+                        
+                         <div class="labelgroup col-md-6">
+                            <label>Employed for:</label>
+                            <span>10 years 8 months</span>
+                        </div>
                         <div class="labelgroup columngroup">
                             <label>Department</label>
                             <span>Flight Operations</span>
