--- a/lighthr/pages/examples/login-register.html
+++ b/lighthr/pages/examples/login-register.html
@@ -378,7 +378,7 @@ font-size: 12px;
                             </div>
 				</div>
 				<!-- <a href="../dashboard/dashboard2.html" class="ghost mt-4">Sign Up</a> -->
-				<a href="../examples/otp.html" class="ghost mt-4">Send OTP</a>
+				<a href="../examples/signupotp.html" class="ghost mt-4">Send OTP</a>
 			</form>
 		</div>
 		<div class="form-container sign-in-container">
@@ -387,7 +387,7 @@ font-size: 12px;
 				<h1>Existing User</h1>
 				<span>Please fill in the details to login</span>
 				<input type="text" placeholder="Mobile No" value="Mobile Number" class="mt-5" />
-				<span class="mt-4" style="font-weight: bold;">-- Or --</span>
+				<span class="mt-4 orspan"><span>Or sign in with</span></span>
 				<input type="text" placeholder="Email ID" value="Email ID" class="mt-2 mb-2" />
 				<!-- <input type="text" placeholder="DOB" value="DOB" /> -->
 				<!-- <a href="#">Forgot your password?</a> -->
