Search Cv Added
Search Cv Added

--- a/lighthr/pages/admin/admin-all-leave.html
+++ b/lighthr/pages/admin/admin-all-leave.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 
@@ -317,11 +317,14 @@ z-index: 9;
                             <li class="active">
                                 <a href="../admin/admin-all-leave.html">Leave</a>
                             </li>
-                            <li >
+                            <li>
                                 <a href="../admin/admin-all-services.html">Service Request</a>
                             </li>
                             <li class="">
                                 <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+                            <li class="">
+                                <a href="../admin/admin-SearchCV.html">Search CV</a>
                             </li>
                             <li class="">
                                 <a href="#">Public Holidays</a>
