--- a/lighthr/pages/dashboard/dashboard2.html
+++ b/lighthr/pages/dashboard/dashboard2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 
@@ -311,6 +311,9 @@ td.center, td.left {
                             </li>
                             <li class="">
                                 <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+			                <li class="">
+                                <a href="../admin/admin-SearchCV.html">Search CV</a>
                             </li>
                             <li class="">
                                 <a href="#">Public Holidays</a>
