--- a/lighthr/pages/admin/admin-workflow.html
+++ b/lighthr/pages/admin/admin-workflow.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 
@@ -323,6 +323,9 @@ z-index: 9;
                             </li>
                             <li class="">
                                 <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+                            <li class="">
+                                <a href="../admin/admin-SearchCV.html">Search CV</a>
                             </li>
                             <li class="">
                                 <a href="#">Public Holidays</a>
