Search Cv Added
Search Cv Added

--- a/lighthr/pages/admin/admin-SearchCV.html
+++ b/lighthr/pages/admin/admin-SearchCV.html
@@ -842,6 +842,7 @@
                                               <table class="table table-hover js-basic-example contact_list" id="tblSearchCv" style="display:none">
                                                     <thead>
                                                         <tr>
+                                                            <th class="center"> Candidate Name </th>
                                                             <th class="center"> Work Experience </th>
                                                             <th class="center"> Current Location </th>
                                                             <th class="center"> Nationality </th>
@@ -853,6 +854,7 @@
                                                     </thead>
                                                     <tbody>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">AYESHA</td>
                                                             <td class="center">5 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -873,6 +875,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Fathima</td>
                                                             <td class="center">6 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -892,6 +895,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Mariyam</td>
                                                             <td class="center">10 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -912,6 +916,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Abdul Rahim</td>
                                                             <td class="center">9 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -932,6 +937,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Kader</td>
                                                             <td class="center">12 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -952,6 +958,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Khalid</td>
                                                             <td class="center">3 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -972,6 +979,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Barakhat</td>
                                                             <td class="center">15 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -992,6 +1000,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Marvan</td>
                                                             <td class="center">5 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
@@ -1012,6 +1021,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr class="odd gradeX">
+                                                            <td class="center">Suhail</td>
                                                             <td class="center">12 Years</td>
                                                             <td class="center col-green">Dubai</td>
                                                             <td class="center col-green">Emirati (UAE)</td>
