--- a/lighthr/pages/leave/add-leave.html
+++ b/lighthr/pages/leave/add-leave.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 
@@ -536,10 +536,10 @@
                                     <div class="form-group">
                                         <select class="col-12 m-t-20 p-l-0">
                                             <option value="" disabled selected>Leave Type</option>
-                                            <option value="1">Privilege Leave</option>
                                             <option value="2">Casual Leave</option>
                                             <option value="3">Sick Leave</option>
                                             <option value="4">Maternity Leave</option>
+                                            <option value="1">Annual leave</option>
                                         </select>
                                     </div>
                                 </div>
