CVupload changed added

--- a/lighthr/pages/examples/login-register.html
+++ b/lighthr/pages/examples/login-register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -406,6 +406,7 @@ font-size: 12px;
 					<h1>Hello, Friend!</h1>
 					<p>Enter your personal details and start journey with us</p>
 					<button class="ghost" id="signUp">Sign Up</button>
+					<a href="../examples/CVupload.html" class="ghost">CV upload</a>
 				</div>
 			</div>
 		</div>
